--- a/short_exercises/town_hall/speakers/c03x_sorkin.html
+++ b/short_exercises/town_hall/speakers/c03x_sorkin.html
@@ -7,11 +7,11 @@
 	<link rel="shortcut icon" href="../images/favicon.ico">
 </head>
 <body>
-	<h1>Andrew Ross Sorkin, author of Too Big to Fail</h1>
+	<h1>Andrew Ross Sorkin, author of <em>Too Big to Fail</em></h1>
 	<h2>November</h2>
 	<img src="images/sorkin_desk260.jpg">
-	<p>New York Times columnist and author, Andrew Ross Sorkin, has been described as the most famous financial journalist of his generation. His book, Too Big to Fail, was the first behind-the-scenes account of the financial crisis that led to our current recession.</p>
-	<p>The Economist, The Financial Times, and Business Week all named Too Big To Fail one of the best books of the year. The book was published by Viking October 20, 2009. The book was adapted as a movie by HBO Films and premiered on HBO on May 23, 2011.</p>
+	<p>New York Times columnist and author, Andrew Ross Sorkin, has been described as <q>the most famous financial journalist of his generation</q>. His book, <em>Too Big to Fail</em>, was the first behind-the-scenes account of the financial crisis that led to our current recession.</p>
+	<p>The Economist, The Financial Times, and Business Week all named <em>Too Big To Fail</em> one of the best books of the year. The book was published by Viking October 20, 2009. The book was adapted as a movie by HBO Films and premiered on HBO on May 23, 2011.</p>
 			
 	<h2>The cast of the movie: <em>Too Big to Fail</em></h2>
 	<ol>
