--- a/short_exercises/town_hall/speakers/c03x_sorkin.html
+++ b/short_exercises/town_hall/speakers/c03x_sorkin.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>San Joaquin Valley Town Hall</title>
-	<link rel="shortcut icon" href="../images/favicon.ico">
+	<link rel="shortcut icon" href="images/favicon.ico">
 </head>
 <body>
 	<h1>Andrew Ross Sorkin, author of <em>Too Big to Fail</em></h1>
@@ -32,5 +32,3 @@
 	</footer>
 </body>
 </html>
-
-
